--- a/ProyectoAplicadaI/UI/Registros/RegistrodeClientes.resx
+++ b/ProyectoAplicadaI/UI/Registros/RegistrodeClientes.resx
@@ -212,4 +212,80 @@
         A///4Af//+AP///4P/////////////////8=
 </value>
   </data>
+  <data name="GeneralerrorProvider.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAMAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAACPF/xYoy/9/KMr/yijK//Uoyv/1KMr/yijK/34kzv8VAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAACjJ/1ooyv/0KMr//yjK//8oyv//KMr//yjK//8oyv//KMn/8ynK
+        /1cAAAAAAAAAAAAAAAAAAAAAAAAAACfJ/1Uoyv/+KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv/+KMr/UgAAAAAAAAAAAAAAACTO/xUoyv/xKMr//yjK//8oyv//KMr//zmQpv85kKb/KMr//yjK
+        //8oyv//KMr//yfK/+8oyf8TAAAAAAAAAAAnyv+CKMr//yjK//8oyv//KMr//yjK//9Cc3n/QnN5/yjK
+        //8oyv//KMr//yjK//8oyv//KMv/fwAAAAAAAAAAKMv/0SjK//8oyv//KMr//yjK//8oyv//QnN5/0Jz
+        ef8oyv//KMr//yjK//8oyv//KMr//yjK/84AAAAAAAAAACjJ//Moyv//KMr//yjK//8oyv//KMr//0Jz
+        ef9Cc3n/KMr//yjK//8oyv//KMr//yjK//8oyv/yAAAAAAAAAAAoyf/zKMr//yjK//8oyv//KMr//yjK
+        //9Cc3n/QnN5/yjK//8oyv//KMr//yjK//8oyv//KMr/8gAAAAAAAAAAKMv/0SjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK/84AAAAAAAAAACfK/4Ioyv//KMr//yjK
+        //8oyv//KMr//zaevP81n7z/KMr//yjK//8oyv//KMr//yjK//8oy/9/AAAAAAAAAAAkzv8VKMr/8SjK
+        //8oyv//KMr//yjK//81nr3/NZ++/yjK//8oyv//KMr//yjK//8nyv/vKMn/EwAAAAAAAAAAAAAAACfJ
+        /1Uoyv/+KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv/+KMr/UgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAKMn/WijK//Qoyv//KMr//yjK//8oyv//KMr//yjK//8oyf/zKcr/VwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAjxf8WKMv/fyjK/8ooyv/pKMr/6SjK/8ooyv9+JM7/FQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAPw/AADwDwAA4AcAAMADAACAAwAAgAEAAIABAACAAQAAgAEAAIADAADAAwAA4AcAAPAP
+        AAD8PwAA//8AADWfvP8tvOn/KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr/xQD/
+        /wEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApyf9QKMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//zWfvP9PRzf/T0c3/zWfvP8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr/TQAAAAAAAAAAAAAAAAAAAAAAAAAAAP//ASjK/9coyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//NZ+8/09HN/9PRzf/NZ+8/yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv/VAAAAAAAAAAAAAAAAAAAAAAAAAAAryv8wKMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//81n7z/T0c3/09HN/81n7z/KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8ozP8tAAAAAAAAAAAAAAAAAAAAACjJ/4Aoyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//zWfvP9PRzf/T0c3/zWfvP8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//ynK/30AAAAAAAAAAAAAAAAAAAAAKMr/wCjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//NZ+8/09HN/9PRzf/NZ+8/yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr/vQAAAAAAAAAAAAAAAAAA
+        AAAoyv/ZKMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//81n7z/T0c3/09H
+        N/81n7z/KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv/XAAAAAAAA
+        AAAAAAAAAAAAACjJ//Moyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//zWf
+        vP9PRzf/T0c3/zWfvP8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //IAAAAAAAAAAAAAAAAAAAAAKMn/8yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//NZ+8/09HN/9PRzf/NZ+8/yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr/8gAAAAAAAAAAAAAAAAAAAAAoyv/aKMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//81n7z/T0c3/09HN/81n7z/KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv/YAAAAAAAAAAAAAAAAAAAAACjK/78oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK/70AAAAAAAAAAAAAAAAAAAAAKMn/hSjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//J8r/ggAAAAAAAAAAAAAAAAAAAAAmyv81KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//L7Pb/y+z2/8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8pzP8yAAAAAAAAAAAAAAAAAAAAAAD/
+        /wEoyv/XKMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//y+x2f9PSDj/T0g4/y+z
+        2/8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr/1QAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAACjJ/1koyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//MLLa/09I
+        OP9PSDj/L7Pb/yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8nyv9WAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAP//ASnK/8koyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//L7Pb/y+z2/8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr/xQD/
+        /wEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKsr/KyjK//Eoyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjL
+        /+4pyP8lAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJ8j/QSjK//ooyv//KMr//yjK
+        //8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv/5Kcr/PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKMr/TSjJ
+        //Moyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr/8ijJ/0wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAKMn/JijK/80oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK/8skzP8jAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAP//ASnL/1goyv/ZKMr//yjK//8oyv//KMr//yjK//8oyv//KMr//yjK
+        //8oyv//KMr//yjK/9gnyv9WAP//AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAqy/8xKMr/fijK/7ooyv/TKMr/6SjK
+        /+koyv/TKMr/uinK/30ryv8wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////+B///8AD//8AAP/+AAB//AAAP/gAAB/wAAAP8AAAD+AA
+        AAfgAAAHwAAAB8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPgAAAH4AAAB/AAAA/wAAAP+AAAH/wA
+        AD/+AAB//wAA///AA///+B////////////8=
+</value>
+  </data>
 </root>
